# vrc-translate-typhoon

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.toml  package.ps1
examples/: deepl_bench.rs  post.rs
service/: build_server.spec  requirements.txt  server.py
src/: audio.rs  claude.rs  config.rs  main.rs  mt.rs  nllb.rs  osc.rs  service.rs  state.rs  translate.rs  typhoon.rs  ui.rs  vad.rs  worker.rs
